# fern

./: .cproject  .project  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  Makefile.cpu  README.md  atmos.gnu
data/: 150.ini  150_test.ref  AtmSpec_polluted.inp  AtmSpec_remotropo.inp  AtmSpec_rural.inp  Atmos_AllRGs.txt  Atmos_mainRGs.txt  Atmos_species.txt  CUDAnet.inp  CUDAnet_150solar.inp  CUDAnet_365.inp  CUDAnet_70.inp  CUDAnet_alpha.inp  CUDAnet_alpha2.inp  CUDAnet_alpha2_doc.inp  CUDAnet_alpha3.inp  CUDAnet_atmos.inp  CUDAnet_atmos_kengo.inp  CUDAnet_iron.inp  CUDAnet_nova150.inp  ReacAddtoLine.php  alpha.ini  alpha_gold.txt  alpha_javaComparison.ini  cachegrind.out.4029  newAtmSpec_polluted.inp  newAtmSpec_remotropo.inp  newAtmSpec_rural.inp  parseAtmosReac.php  (+14 more)
src/: CMakeLists.txt  DefaultStepper.h  ExampleTest.cpp  FERNIntegrator.cpp  FERNIntegrator.cu  FERNIntegrator.cuh  FERNIntegrator.hpp  FERN_eigenvalues.m  FERN_eigenvalues_Windows.m  FERN_eigenvalues_Windows_8.28.16.m  Globals.cpp  Globals.cu  Globals.cuh  Globals.hpp  IntegrationData.cpp  IntegrationData.cu  IntegrationData.cuh  IntegrationData.hpp  JavaComparisonTest.cpp  Network.cpp  Network.cu  Network.cuh  Network.hpp  fern_math.h  interface.cpp  interface.hpp  kernels.cpp  kernels.cu  kernels.cuh  kernels.hpp  main.cpp  main.cu
src/MATLAB/10.2016/: FERN_eigenvalues_Windows_10_2016.m  README.txt
src/MATLAB/10.2016/fern/data/: Y_3.out  rateLibrary_150.data
src/MATLAB/4.2016/: FERN_eigenvalues_Unix.m
src/MATLAB/8.2016/: FERN_eigenvalues_Windows.m.7.2016.smooth
src/MATLAB/9.2016/: FERN_eigenvalues_Unix_9.1.16.m  FERN_eigenvalues_Windows_9.1.16.m
src/MATLAB/9.2016/fern/data/: CUDAnet_150.inp  CUDAnet_150.inp.bak  CUDAnet_3.inp  Y_150.out  Y_16.out  rateLibrary_150.data.bak  rateLibrary_365.data  stochastic_16alpha.tmp  stochastic_3alpha.tmp
src/edu.utk.phys.fern/: .classpath  .project  RateViewer3D.bat  StochasticElements_diagnostic.java-save  elementProto.java-3d  readmeReacLib.txt  temp.txt
src/edu.utk.phys.fern/data/: iso10_11.ser  iso10_13.ser  iso10_14.ser  iso10_15.ser  iso10_16.ser  iso10_17.ser  iso10_18.ser  iso10_21.ser  iso10_22.ser  iso10_23.ser  iso10_24.ser  iso10_26.ser  iso10_27.ser  iso10_28.ser  iso10_6.ser  iso10_7.ser  iso10_8.ser  iso11_11.ser  iso11_12.ser  iso11_13.ser  iso11_15.ser  iso11_17.ser  iso11_21.ser  iso11_22.ser  iso11_23.ser  iso11_29.ser  iso11_31.ser  iso11_33.ser  iso11_6.ser  iso12_12.ser  iso12_13.ser  iso12_14.ser  iso12_15.ser  iso12_18.ser  iso12_19.ser  iso12_20.ser  iso12_22.ser  iso12_23.ser  iso12_26.ser  iso12_27.ser  (+1102 more)
src/edu.utk.phys.fern/edu/utk/phys/fern/: AbPlotFrame.java  AbundanceData.java  ChooseActiveIsotopes.java  ChooseActiveRates.java  ChooseIsotopes.java  ContourDisplay.java  ContourFileDialogue.java  ContourFileDialogueFlux.java  ContourFrame.java  ContourFrameFlux.java  ContourPad.java  ContourPadFlux.java  ContourPlotter.java  Cvert.java  DataHolder.java  DeserializeReaclib.java  EditOld.java  ElementMaker.java  FriedelParser.java  FriedelRead2.java  GenericHelpDialog.java  GenericHelpFrame.java  GetVersionSVN.java  GraphicsGoodies2.java  GraphicsPad.java  HorString.java  HostCommands.java  InterpolateColorTable.java  IsoData.java  IsoVector.java  IsotopePad.java  LegendPad.java  LegendPadFlux.java  LegendTester.java  ListSystemProperties.java  LoadR1.java  MakeMyDialog.java  MakeWarning.java  MatrixAlg.java  MyColors.java  (+32 more)
src/edu.utk.phys.fern/supportingClasses/: BoxFrame.java  ColorBoxLineGridX.java  ColorBoxLineZ.java  ColorLegend.java  ColorRamping.java  Histogram3D.java  KBKeyFrame.java  KBSplinePathInterpolator.java  TimestepBehavior.java
src/edu.utk.phys.fern/supportingClasses/SCCS/: c.ReadFile.java@1.0  c.ReadFile.java@1.1  p.BoxFrame.java  p.ColorLegend.java  p.GridBoxText.java  s.BoxFrame.java  s.ColorBoxLineGridZ.java  s.ColorBoxLineZ.java  s.ColorLegend.java  s.ColorRamping.java  s.Histogram3D.java  s.KBCubicSplineCurve.java  s.KBCubicSplineSegment.java  s.TimeDisplay.java  s.TimestepBehavior.java
src/eigen_stepper/: FERN_eigenvalues.m
src/gpu/: Network.cu  main.cu
src/java/: AbPlotFrame.java  AbundanceData.java  ChooseActiveIsotopes.java  ChooseActiveRates.java  ChooseIsotopes.java  ContourDisplay.java  ContourFileDialogue.java  ContourFileDialogueFlux.java  ContourFrame.java  ContourFrameFlux.java  ContourPad.java  ContourPadFlux.java  ContourPlotter.java  Cvert.java  DataHolder.java  DeserializeReaclib.java  EditOld.java  ElementMaker.java  FriedelParser.java  FriedelRead2.java  GenericHelpDialog.java  GenericHelpFrame.java  GetVersionSVN.java  GraphicsGoodies2.java  GraphicsPad.java  HorString.java  HostCommands.java  InterpolateColorTable.java  IsoData.java  IsoVector.java  IsotopePad.java  LegendPad.java  LegendPadFlux.java  LegendTester.java  ListSystemProperties.java  LoadR1.java  MakeMyDialog.java  MakeWarning.java  MatrixAlg.java  MyColors.java  (+35 more)
src/java/data/: iso0_1.ser  iso10_10.ser  iso10_12.ser  iso10_19.ser  iso10_20.ser  iso10_25.ser  iso10_29.ser  iso10_30.ser  iso10_31.ser  iso10_5.ser  iso10_9.ser  iso11_10.ser  iso11_14.ser  iso11_16.ser  iso11_18.ser  iso11_19.ser  iso11_20.ser  iso11_24.ser  iso11_25.ser  iso11_26.ser  iso11_27.ser  iso11_28.ser  iso11_30.ser  iso11_32.ser  iso11_7.ser  iso11_8.ser  iso11_9.ser  iso12_10.ser  iso12_11.ser  iso12_16.ser  iso12_17.ser  iso12_21.ser  iso12_24.ser  iso12_25.ser  iso12_28.ser  iso12_30.ser  iso12_31.ser  iso12_32.ser  iso12_34.ser  iso12_9.ser  (+1105 more)
src/java/supportingClasses/: ColorBoxLineGridZ.java  GridBoxText.java  KBCubicSplineCurve.java  KBCubicSplineSegment.java  KBRotPosScaleSplinePathInterpolator.java  ReadFile.java  ReadVariableData.java  TimeDisplay.java
src/java/supportingClasses/SCCS/: p.ColorBoxLineGridZ.java  p.ColorRamping.java  p.Histogram3D.java  p.KBKeyFrame.java  p.KBRotPosScaleSplinePathInterpolator.java  p.ReadFile.java  p.TimeDisplay.java  p.TimestepBehavior.java  s.ColorBoxLineGridX.java  s.GridBoxText.java  s.KBKeyFrame.java  s.KBRotPosScaleSplinePathInterpolator.java  s.KBSplinePathInterpolator.java  s.ReadFile.java
(+172 files in other folders)
